--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/f450.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/f450.sdf.jinja
@@ -461,64 +461,63 @@
       <!--}-->
       {% endif %}
 
-      {# TODO: !! #}
-      {% if enable_realsense_front %}
-      <!-- Realsense front mount {-->
-      {{ generic.visual_mesh_macro(
-        name = "realsense_front_mount",
-        mesh_file = realsense_front_mount_mesh,
-        mesh_scale = mesh_scale_milimeters,
-        color = "DarkGrey",
-        x = 0.153,
-        y = 0,
-        z = -0.089,
-        roll = 0,
-        pitch = 0,
-        yaw = 0)
-      }}
-      <!--}-->
-      {% endif %}
+      {# Realsense front mount {--> #}
+      {%- set realsense_front_mount -%}
+        {{ generic.visual_link_macro(
+          name = "realsense_front_mount",
+          mesh_file = realsense_front_mount_mesh,
+          mesh_scale = mesh_scale_milimeters,
+          color = "DarkGrey",
+          x = 0.153,
+          y = 0,
+          z = -0.089,
+          roll = 0,
+          pitch = 0,
+          yaw = 0,
+          parent_link = root)
+        }}
+      {%- endset -%}
+      {# <!--}--> #}
 
-      {# TODO: !! #}
-      {% if enable_realsense_front_pitched %}
-      <!-- Realsense front pitched mount {-->
-      {{ generic.visual_mesh_macro(
-        name = "realsense_front_pitched_mount",
-        mesh_file = realsense_front_pitched_mount_mesh,
-        mesh_scale = mesh_scale_milimeters,
-        color = "DarkGrey",
-        x = 0.153,
-        y = 0,
-        z = -0.089,
-        roll = 0,
-        pitch = 0,
-        yaw = 0)
-      }}
-      <!--}-->
-      {% endif %}
+      {# Realsense front pitched mount {--> #}
+      {%- set realsense_front_pitched_mount -%}
+        {{ generic.visual_link_macro(
+          name = "realsense_front_pitched_mount",
+          mesh_file = realsense_front_pitched_mount_mesh,
+          mesh_scale = mesh_scale_milimeters,
+          color = "DarkGrey",
+          x = 0.153,
+          y = 0,
+          z = -0.089,
+          roll = 0,
+          pitch = 0,
+          yaw = 0,
+          parent_link = root)
+        }}
+      {%- endset -%}
+      {# <!--}--> #}
 
-      {# TODO: !! #}
-      {% if enable_realsense_down %}
-      <!-- Realsense down mount {-->
-      {{ generic.visual_mesh_macro(
-        name = "realsense_down_mount",
-        mesh_file = realsense_front_down_mount_mesh,
-        mesh_scale = mesh_scale_milimeters,
-        color = "DarkGrey",
-        x = 0.153,
-        y = 0,
-        z = -0.089,
-        roll = 0,
-        pitch = 0,
-        yaw = 0)
-      }}
-      <!--}-->
-      {% endif %}
+      {# Realsense down mount {--> #}
+      {%- set realsense_down_mount -%}
+        {{ generic.visual_link_macro(
+          name = "realsense_down_mount",
+          mesh_file = realsense_front_down_mount_mesh,
+          mesh_scale = mesh_scale_milimeters,
+          color = "DarkGrey",
+          x = 0.153,
+          y = 0,
+          z = -0.089,
+          roll = 0,
+          pitch = 0,
+          yaw = 0,
+          parent_link = root)
+        }}
+      {%- endset -%}
+      {# <!--}--> #}
 
-      {# TODO: !! #}
-      {% if enable_dual_uv_cameras %}
-      <!-- UVDAR mount {-->
-      {{ generic.visual_mesh_macro(
+      {# uvdar mount {--> #}
+      {%- set uvdar_mount -%}
+      {{ generic.visual_link_macro(
         name = "uvdar_mount",
         mesh_file = uvdar_mount_mesh,
         mesh_scale = mesh_scale_milimeters,
@@ -528,12 +527,11 @@
         z = 0.036,
         roll = 0,
         pitch = 0,
-        yaw = 0)
+        yaw = 0,
+        parent_link = root)
       }}
-      <!--}-->
-      {% endif %}
-
-      <!--}-->
+      {%- endset -%}
+      {# <!--}--> #}
 
     </link>
 
@@ -608,7 +606,7 @@
     {# ================================================================== #}
     {# ||                compulsory sensor definitions                 || #}
     {# ================================================================== #}
-    
+
     <!-- pixhawk {-->
     {%- set imu_topic = "/imu" -%}
     {%- set mag_topic = "/mag" -%}
@@ -789,8 +787,8 @@
     -%}
     {{ rplidar }}
     {# <!--}--> #}
-    
-    {# do we have an active 2D lidar? {--> #}
+
+    {# 2D lidar mount {--> #}
     {%- if rplidar | replace('\s', '') | length != 0 or scanse_sweep | replace('\s', '') | length != 0 -%}
       <!-- 2d lidar mount {-->
       {{ lidar_mount_2d }}
@@ -829,8 +827,8 @@
     -%}
     {{ ouster }}
     {# <!--}--> #}
-    
-    {# do we have an active 3D lidar? {--> #}
+
+    {# 3D lidar mount {--> #}
     {%- if velodyne | replace('\s', '') | length != 0 or ouster | replace('\s', '') | length != 0 -%}
       <!-- 3d lidar mount {-->
       {{ lidar_mount_3d }}
@@ -862,123 +860,109 @@
     {% endif %}
     <!--}-->
 
-    <!-- Bluefox camera placements{-->
+    {# Bluefox camera placements {--> #}
 
-    {% if enable_bluefox_camera_reverse %}
-    <!-- bluefox reverse {-->
-    {{ components.bluefox_camera_macro(
-      namespace = namespace,
+    {# bluefox (classic) {--> #}
+    {%- set bluefox_camera = components.bluefox_camera_macro(
       camera_name = "bluefox_optflow",
       parent_link = root,
-      frame_rate = 100.0,
-      hfov = 2.1,
-      noise = 0.0,
       x = 0.05,
       y = 0,
       z = - (arm_height + 0.055),
-      roll = 0,
-      pitch = math.radians90,
-      yaw = math.radians180)
-    }}
-    <!--}-->
-    {% endif %}
+      mount = none,
+      spawner_args = spawner_args)
+    -%}
+    {{ bluefox_camera }}
+    {# <!--}--> #}
 
-    {% if enable_bluefox_camera %}
-    <!-- bluefox classic {-->
-    {{ components.bluefox_camera_macro(
-      namespace = namespace,
+    {# bluefox reverse {--> #}
+    {%- set bluefox_camera_reverse = components.bluefox_camera_reverse_macro(
       camera_name = "bluefox_optflow",
       parent_link = root,
-      frame_rate = 100.0,
-      hfov = 2.1,
-      noise = 0.0,
       x = 0.05,
       y = 0,
       z = - (arm_height + 0.055),
-      roll = 0,
-      pitch = math.radians90,
-      yaw = 0)
-    }}
-    <!--}-->
-    {% endif %}
+      mount = none,
+      spawner_args = spawner_args)
+    -%}
+    {{ bluefox_camera_reverse }}
+    {# <!--}--> #}
 
-    <!--}-->
+    {# bluefox mount {--> #}
+    {%- if bluefox_camera | replace('\s', '') | length != 0 or bluefox_camera_reverse | replace('\s', '') | length != 0 -%}
+      {{ bluefox_mount }}
+    {%- endif -%}
+    {# <!--}--> #}
 
-    <!-- Realsense placements {-->
+    {# <!--}--> #}
 
-    {% if enable_realsense_down %}
-    <!-- realsense down {-->
-    {{ components.realsense_macro(
-      namespace = namespace,
+    {# Realsense placements {--> #}
+
+    {# realsense down {--> #}
+    {{ components.realsense_down_macro(
       camera_name = "rgbd",
       camera_suffix="_down",
       parent_link = root,
-      enable_realistic_realsense = enable_realistic_realsense,
       x = 0.153,
       y = 0,
       z = -0.103,
       roll = 0,
-      pitch = math.radians90,
-      yaw = 0)
+      pitch = math.radians(90),
+      yaw = 0,
+      mount = realsense_down_mount,
+      spawner_args = spawner_args)
     }}
-    <!--}-->
-    {% endif %}
+    {# <!--}--> #}
 
-    {% if enable_realsense_front_pitched %}
-    <!-- realsense front pitched {-->
-    {{ components.realsense_macro(
-      namespace = namespace,
+    {# realsense front pitched {--> #}
+    {{ components.realsense_front_pitched_macro(
       camera_name = "rgbd",
       camera_suffix="_front_pitched",
       parent_link = root,
-      enable_realistic_realsense = enable_realistic_realsense,
       x = 0.16,
       y = 0,
       z = -0.089,
       roll = 0,
-      pitch = math.radians45,
-      yaw = 0)
+      pitch = math.radians(45),
+      yaw = 0,
+      mount = realsense_front_pitched_mount,
+      spawner_args = spawner_args)
     }}
-    <!--}-->
-    {% endif %}
+    {# <!--}--> #}
 
-    {% if enable_realsense_front %}
-    <!-- realsense front pitched {-->
-    {{ components.realsense_macro(
-      namespace = namespace,
+    {# realsense front {--> #}
+    {{ components.realsense_front_macro(
       camera_name = "rgbd",
       camera_suffix="",
       parent_link = root,
-      enable_realistic_realsense = enable_realistic_realsense,
       x = 0.155,
       y = 0,
       z = -0.089,
       roll = 0,
       pitch = 0,
-      yaw = 0)
+      yaw = 0,
+      mount = realsense_front_mount,
+      spawner_args = spawner_args)
     }}
-    <!--}-->
-    {% endif %}
+    {# <!--}--> #}
 
-    {% if enable_realsense_up %}
-    <!-- realsense front pitched {-->
-    {{ components.realsense_macro(
-      namespace = namespace,
+    {# realsense up {--> #}
+    {{ components.realsense_up_macro(
       camera_name = "rgbd",
       camera_suffix="_up",
       parent_link = root,
-      enable_realistic_realsense = enable_realistic_realsense,
       x = 0.07,
       y = 0,
       z = 0.025,
       roll = 0,
-      pitch = - math.radians90,
-      yaw = 0)
+      pitch = -math.radians(90),
+      yaw = 0,
+      mount = none,
+      spawner_args = spawner_args)
     }}
-    <!--}-->
-    {% endif %}
+    {# <!--}--> #}
 
-    <!--}-->
+    {# <!--}--> #}
 
     <!-- Mobius placements {-->
 
@@ -1052,60 +1036,37 @@
     <!--} -->
 
     {# Dual UV cameras {--> #}
-    {% if enable_dual_uv_cameras %}
-    <!-- Dual UV cameras {-->
-    {{ components.uvcam_macro(
+    {{ components.dual_uv_cameras_macro(
       parent_link = root,
-      camera_publish_topic = "/" + namespace + "/uvdar_bluefox_left/image_raw",
-      calibration_file = uvcam_calib_file,
-      occlusions = uvcam_occlusions,
-      frame_rate = 60,
-      device_id = namespace + "_1",
-      x = 0.037,
-      y = 0.1175,
-      z = 0.05,
-      roll = 0,
-      pitch = 0,
-      yaw = math.radians70)
+      x1 = 0.037,
+      y1 = 0.1175,
+      z1 = 0.05,
+      roll1 = 0,
+      pitch1 = 0,
+      yaw1 = math.radians(70),
+      x2 = 0.037,
+      y2 = -0.1175,
+      z2 = 0.05,
+      roll2 = 0,
+      pitch2 = 0,
+      yaw2 = -math.radians(70),
+      mount = uvdar_mount,
+      spawner_args = spawner_args)
     }}
-
-    {{ components.uvcam_macro(
-      parent_link = root,
-      camera_publish_topic = "/" + namespace + "/uvdar_bluefox_right/image_raw",
-      calibration_file = uvcam_calib_file,
-      occlusions = uvcam_occlusions,
-      frame_rate = 60,
-      device_id =  namespace + "_2",
-      x = 0.037,
-      y = -0.1175,
-      z = 0.05,
-      roll = 0,
-      pitch = 0,
-      yaw = -math.radians70)
-    }}
-    <!--}-->
-    {% endif %}
     {# <!--}--> #}
 
     {# Back UV cameras {--> #}
-    {% if enable_back_uv_camera %}
-    <!-- Back UV camera {-->
-    {{ components.uvcam_macro(
+    {{ components.back_uv_camera_macro(
       parent_link = root,
-      camera_publish_topic = "/" + namespace + "/uvdar_bluefox_back/image_raw",
-      calibration_file = uvcam_calib_file,
-      occlusions = uvcam_occlusions,
-      frame_rate = 60,
-      device_id =  namespace + "_3",
       x = -0.1,
       y = 0.0,
       z = -0.02,
-      roll = math.radians90,
+      roll = math.radians(90),
       pitch = 0,
-      yaw = math.radians180)
+      yaw = math.radians(180),
+      mount = none,
+      spawner_args = spawner_args)
     }}
-    <!--}-->
-    {% endif %}
     {# <!--}--> #}
 
     {# Servo camera {--> #}
