--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/x500.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/x500.sdf.jinja
@@ -576,7 +576,7 @@
 
     </link>
 
-    <!-- Propellers {-->
+    {# Propellers {--> #}
     {%- set prop_list = [
     {
     'motor_number': 0,
@@ -642,7 +642,7 @@
       prop_izz = prop_izz,
       spawner_args = spawner_args)
     }}
-    <!--}-->
+    {# <!--}--> #}
 
     {# ================================================================== #}
     {# ||                compulsory sensor definitions                 || #}
